--- a/hmap/hmap.html
+++ b/hmap/hmap.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./hmap.css">
+    <link rel="stylesheet" href="../css/hmap.css">
     <title>우.동.헬</title>
 </head>
 <body>
@@ -12,8 +12,8 @@
             <div class="header-container">
                 <div class="header-box1">
                     <div class="logo">
-                        <a href="../main/main.html">
-                            <img src="/admin/img/logo.png" alt="">
+                        <a href="../main/pro/main.html">
+                            <img src="../img/logo.png" alt="">
                         </a>
                     </div>
                     <div class="header-nav">
@@ -22,7 +22,7 @@
                                 <a href="../hmap/hmap.html">우리동네 헬스장</a>
                             </li>
                             <li>
-                                <a href="../community/community.html">커뮤니티</a>
+                                <a href="../board/pro/community.html">커뮤니티</a>
                             </li>
                         </ul>
                     </div>
@@ -30,10 +30,10 @@
                 <div class="header-box2">
                     <ul class="header-box2">
                         <li>
-                            <a href="../login/login.html">로그인</a>
+                            <a href="../member/pro/login.html">로그인</a>
                         </li>
                         <li>
-                            <a href="../main/join.html">회원가입</a>
+                            <a href="../member/pro/join.html">회원가입</a>
                         </li>
                     </ul>
                 </div>
@@ -45,12 +45,12 @@
            
             <div class="main-container-up-section1">
                 <h1>우리동네 헬스장</h1>
-                <div class="section1-img"><img src="/hmap/img/hmap1.png" alt=""></div>
+                <div class="section1-img"><img src="../img/hmap1.png" alt=""></div>
             </div>
             <div class="main-container-text">검색창에 위치를 입력하면 근처 헬스장을 찾아드려요!</div>
             <div class="main-container-up-section2">
                 <form onsubmit="searchPlaces(); return false;">
-                    <img class="main-container-up-section2-img" src="/hmap/img/glass.png">
+                    <img class="main-container-up-section2-img" src="../img/glass.png">
                     <input type="text" value="노원" id="keyword" size="15" class="main-container-up-section2-searchbox"> 
                     <button class="main-container-up-section2-button" type="submit">검색</button>
                 </form>
@@ -79,7 +79,7 @@
                 <div class="footer-02-01">
                     <div>ⓒ2023 OWW All Rights Reserved</div>
                     <div>
-                        <a href="../main/privacy.html">개인정보처리방침</a>
+                        <a href="../main/pro/privacy.html">개인정보처리방침</a>
                     </div>
                 </div>
             </div>
