페이지,이미지 경로 재설정 /  js 파일  따로 생성 /  자유게시판 작성글 읽기 페이지에 신고버튼 추가

--- a/board/pro/notice.html
+++ b/board/pro/notice.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>공지사항</title>
-    <link rel="stylesheet" href="notice.css">
+    <link rel="stylesheet" href="../../css/notice.css">
 </head>
 <body>
     <header>
         <div class="header-container">
             <div class="header-box1">
-                <div class="logo"><a href="../main/main.html"><img src="./img/logo.png" alt=""></a></div>
+                <div class="logo"><a href="../../main/pro/main.html"><img src="../../img/logo.png" alt=""></a></div>
                 <div class="header-nav">
                     <ul class="header-nav">
                         <li>
-                            <a href="../hmap/hmap.html">우리동네 헬스장</a>
+                            <a href="../../hmap/hmap.html">우리동네 헬스장</a>
                         </li>
                         <li>
                             <a href="./community.html">커뮤니티</a>
@@ -25,10 +25,10 @@
             <div class="header-box2">
                 <ul class="header-box2">
                     <li>
-                        <a href="../login/login.html">로그인</a>
+                        <a href="../../member/pro/login.html">로그인</a>
                     </li>
                     <li>
-                        <a href="../main/join.html">회원가입</a>
+                        <a href="../../member/pro/join.html">회원가입</a>
                     </li>
                 </ul>
             </div>
@@ -43,13 +43,13 @@
                 <div class="main-box1-content">
                     <div class="main-box1-content-button">
                         <a href="./freeBoard.html">
-                            <img class="img1" src="./img/002.png" alt="">
-                            <img class="img2" src="./img/004.png" alt=""></a>
+                            <img class="img1" src="../../img/002.png" alt="">
+                            <img class="img2" src="../../img/004.png" alt=""></a>
                     </div>
                     <div class="main-box1-content-button">
                         <a href="./notice.html">
-                            <img class="img1" src="./img/001.png" alt="">
-                            <img class="img2" src="./img/005.png" alt=""></a>
+                            <img class="img1" src="../../img/001.png" alt="">
+                            <img class="img2" src="../../img/005.png" alt=""></a>
                     </div>
                 </div>
             </div>
@@ -65,62 +65,62 @@
                         <div class="main-box2-content-count">조회수</div>
                     </div>
                     <div class="main-box2-content-content">
-                        <div class="main-box2-content-title"><a href="./readingFB.html">헬린이 여자 근유통이 빡센데 원래 이런가요</a></div>
-                        <div class="main-box2-content-nickname">냐하하핳</div>
+                        <div class="main-box2-content-title"><a href="./readingNT.html">[공지사항]공지1</a></div>
+                        <div class="main-box2-content-nickname">관리자</div>
                         <div class="main-box2-content-date">2023-08-22</div>
                         <div class="main-box2-content-count">5</div>
                     </div>
                     <div class="main-box2-content-content">
-                        <div class="main-box2-content-title">퍼블리싱 너무 빡센데 원래 이런가요</div>
-                        <div class="main-box2-content-nickname">갸갸갸갹</div>
+                        <div class="main-box2-content-title">[공지사항]공지2</div>
+                        <div class="main-box2-content-nickname">관리자</div>
                         <div class="main-box2-content-date">2023-08-22</div>
                         <div class="main-box2-content-count">5</div>
                     </div>
                     <div class="main-box2-content-content">
-                        <div class="main-box2-content-title">JSP 넘 빡센데 원래 이런가요</div>
-                        <div class="main-box2-content-nickname">퀴퀴퀴퀴</div>
+                        <div class="main-box2-content-title">[공지사항]공지3</div>
+                        <div class="main-box2-content-nickname">관리자</div>
                         <div class="main-box2-content-date">2023-08-22</div>
                         <div class="main-box2-content-count">5</div>
                     </div>
                     <div class="main-box2-content-content">
-                        <div class="main-box2-content-title">프로젝트 겁나 빡센데 원래 이런가요</div>
-                        <div class="main-box2-content-nickname">살려주세요</div>
+                        <div class="main-box2-content-title">[공지사항]공지4</div>
+                        <div class="main-box2-content-nickname">관리자</div>
                         <div class="main-box2-content-date">2023-08-22</div>
                         <div class="main-box2-content-count">5</div>
                     </div>
                     <div class="main-box2-content-content">
-                        <div class="main-box2-content-title">헬린이 여자 근유통이 빡센데 원래 이런가요</div>
-                        <div class="main-box2-content-nickname">냐하하핳</div>
+                        <div class="main-box2-content-title">[공지사항]공지5</div>
+                        <div class="main-box2-content-nickname">관리자</div>
                         <div class="main-box2-content-date">2023-08-22</div>
                         <div class="main-box2-content-count">5</div>
                     </div>
                     <div class="main-box2-content-content">
-                        <div class="main-box2-content-title">헬린이 여자 근유통이 빡센데 원래 이런가요</div>
-                        <div class="main-box2-content-nickname">냐하하핳</div>
+                        <div class="main-box2-content-title">[공지사항]공지6</div>
+                        <div class="main-box2-content-nickname">관리자</div>
                         <div class="main-box2-content-date">2023-08-22</div>
                         <div class="main-box2-content-count">5</div>
                     </div>
                     <div class="main-box2-content-content">
-                        <div class="main-box2-content-title">헬린이 여자 근유통이 빡센데 원래 이런가요</div>
-                        <div class="main-box2-content-nickname">냐하하핳</div>
+                        <div class="main-box2-content-title">[공지사항]공지7</div>
+                        <div class="main-box2-content-nickname">관리자</div>
                         <div class="main-box2-content-date">2023-08-22</div>
                         <div class="main-box2-content-count">5</div>
                     </div>
                     <div class="main-box2-content-content">
-                        <div class="main-box2-content-title">헬린이 여자 근유통이 빡센데 원래 이런가요</div>
-                        <div class="main-box2-content-nickname">냐하하핳</div>
+                        <div class="main-box2-content-title">[공지사항]공지8</div>
+                        <div class="main-box2-content-nickname">관리자</div>
                         <div class="main-box2-content-date">2023-08-22</div>
                         <div class="main-box2-content-count">5</div>
                     </div>
                     <div class="main-box2-content-content">
-                        <div class="main-box2-content-title">헬린이 여자 근유통이 빡센데 원래 이런가요</div>
-                        <div class="main-box2-content-nickname">냐하하핳</div>
+                        <div class="main-box2-content-title">[공지사항]공지9</div>
+                        <div class="main-box2-content-nickname">관리자</div>
                         <div class="main-box2-content-date">2023-08-22</div>
                         <div class="main-box2-content-count">5</div>
                     </div>
                     <div class="main-box2-content-content" id="last_list">
-                        <div class="main-box2-content-title">헬린이 여자 근유통이 빡센데 원래 이런가요</div>
-                        <div class="main-box2-content-nickname">냐하하핳</div>
+                        <div class="main-box2-content-title">[공지사항]공지10</div>
+                        <div class="main-box2-content-nickname">관리자</div>
                         <div class="main-box2-content-date">2023-08-22</div>
                         <div class="main-box2-content-count">5</div>
                     </div>
@@ -164,7 +164,7 @@
             <div class="footer-02-01">
                 <div>ⓒ2023 OWW All Rights Reserved</div>
                 <div>
-                    <a href="../main/privacy.html">개인정보처리방침</a>
+                    <a href="../../main/pro/privacy.html">개인정보처리방침</a>
                 </div>
             </div>
         </div>
