--- a/board/pro/readingNT.html
+++ b/board/pro/readingNT.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>작성된 글 보기(공지)</title>
-    <link rel="stylesheet" href="readingNT.css">
+    <link rel="stylesheet" href="../../css/readingNT.css">
 </head>
 <body>
     <header>
         <div class="header-container">
             <div class="header-box1">
-                <div class="logo"><a href="../main/main.html"><img src="./img/logo.png" alt=""></a></div>
+                <div class="logo"><a href="../../main/pro/main.html"><img src="../../img/logo.png" alt=""></a></div>
                 <div class="header-nav">
                     <ul class="header-nav">
                         <li>
-                            <a href="../hmap/hmap.html">우리동네 헬스장</a>
+                            <a href="../../hmap/hmap.html">우리동네 헬스장</a>
                         </li>
                         <li>
                             <a href="./community.html">커뮤니티</a>
@@ -25,10 +25,10 @@
             <div class="header-box2">
                 <ul class="header-box2">
                     <li>
-                        <a href="../mypage/mypage.html">이지윤님</a>
+                        <a href="../../member/views/mypage.html">이지윤님</a>
                     </li>
                     <li>
-                        <a href="../main/main.html">로그아웃</a>
+                        <a href="../../main/pro/main.html">로그아웃</a>
                     </li>
                 </ul>
             </div>
@@ -111,7 +111,7 @@
             <div class="footer-02-01">
                 <div>ⓒ2023 OWW All Rights Reserved</div>
                 <div>
-                    <a href="../main/privacy.html">개인정보처리방침</a>
+                    <a href="../../main/pro/privacy.html">개인정보처리방침</a>
                 </div>
             </div>
         </div>
