--- a/member/pro/login.html
+++ b/member/pro/login.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>로그인</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="../../css/login.css">
 </head>
 <body>
     <header>
         <div class="header-container">
             <div class="header-box1">
-                <div class="logo"><a href="../main/main.html"><img src="./img/logo.png" alt=""></a></div>
+                <div class="logo"><a href="../../main/pro/main.html"><img src="../../img/logo.png" alt=""></a></div>
                 <div class="header-nav">
                     <ul class="header-nav">
                         <li>
-                            <a href="../hmap/hmap.html">우리동네 헬스장</a>
+                            <a href="../../hmap/hmap.html">우리동네 헬스장</a>
                         </li>
                         <li>
-                            <a href="../community/community.html">커뮤니티</a>
+                            <a href="../../board/pro/community.html">커뮤니티</a>
                         </li>
                     </ul>
                 </div>
@@ -28,7 +28,7 @@
                         <a href="./login.html">로그인</a>
                     </li>
                     <li>
-                        <a href="../main/join.html">회원가입</a>
+                        <a href="../../member/pro/join.html">회원가입</a>
                     </li>
                 </ul>
             </div>
@@ -46,7 +46,7 @@
                     <div class="input-button"><button id="input-box-button">로그인</button></div>
                 </form>
             </div>
-            <div class="find-pw"><a href="../findpw/findpw.html">비밀번호찾기</a></div>
+            <div class="find-pw"><a href="../views/findpw.html">비밀번호찾기</a></div>
         </div>
     </main>
     <footer>
@@ -60,7 +60,7 @@
             <div class="footer-02-01">
                 <div>ⓒ2023 OWW All Rights Reserved</div>
                 <div>
-                    <a href="../main/privacy.html">개인정보처리방침</a>
+                    <a href="../../main/pro/privacy.html">개인정보처리방침</a>
                 </div>
             </div>
         </div>
