--- a/board/pro/community.html
+++ b/board/pro/community.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>커뮤니티</title>
-    <link rel="stylesheet" href="community.css">
+    <link rel="stylesheet" href="../../css/community.css">
 </head>
 <body>
     <header>
         <div class="header-container">
             <div class="header-box1">
-                <div class="logo"><a href="../main/main.html"><img src="./img/logo.png" alt=""></a></div>
+                <div class="logo"><a href="../../main/pro/main.html"><img src="../../img/logo.png" alt=""></a></div>
                 <div class="header-nav">
                     <ul class="header-nav">
                         <li>
-                            <a href="../hmap/hmap.html">우리동네 헬스장</a>
+                            <a href="../../hmap/hmap.html">우리동네 헬스장</a>
                         </li>
                         <li>
                             <a href="./community.html">커뮤니티</a>
@@ -25,10 +25,10 @@
             <div class="header-box2">
                 <ul class="header-box2">
                     <li>
-                        <a href="../login/login.html">로그인</a>
+                        <a href="../../member/pro/login.html">로그인</a>
                     </li>
                     <li>
-                        <a href="../main/join.html">회원가입</a>
+                        <a href="../../member/pro/join.html">회원가입</a>
                     </li>
                 </ul>
             </div>
@@ -43,13 +43,13 @@
                 <div class="main-box1-content">
                     <div class="main-box1-content-button">
                         <a href="./freeBoard.html">
-                            <img class="img1" src="./img/002.png" alt="">
-                            <img class="img2" src="./img/004.png" alt=""></a>
+                            <img class="img1" src="../../img/002.png" alt="">
+                            <img class="img2" src="../../img/004.png" alt=""></a>
                     </div>
                     <div class="main-box1-content-button">
                         <a href="./notice.html">
-                            <img class="img1" src="./img/001.png" alt="">
-                            <img class="img2" src="./img/005.png" alt=""></a>
+                            <img class="img1" src="../../img/001.png" alt="">
+                            <img class="img2" src="../../img/005.png" alt=""></a>
                     </div>
                 </div>
             </div>
@@ -65,7 +65,7 @@
                         <div class="main-box2-content-count">조회수</div>
                     </div>
                     <div class="main-box2-content-content" id="notice-content">
-                        <div class="main-box2-content-title"><a href="./readingNT.html">공지사항</a></div>
+                        <div class="main-box2-content-title"><a href="./readingNT.html"">공지사항</a></div>
                         <div class="main-box2-content-nickname">관리자</div>
                         <div class="main-box2-content-date">2023-08-22</div>
                         <div class="main-box2-content-count">155</div>
@@ -164,7 +164,7 @@
             <div class="footer-02-01">
                 <div>ⓒ2023 OWW All Rights Reserved</div>
                 <div>
-                    <a href="../main/privacy.html">개인정보처리방침</a>
+                    <a href="../../main/pro/privacy.html">개인정보처리방침</a>
                 </div>
             </div>
         </div>
